force-app/main/default/objects/CustomerProfile__c/CustomerProfile__c.object-meta.xml
<CustomObject>
    <label>Customer Profile</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Customer Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>