force-app/main/default/objects/CustomerProfile__c/fields/ExternalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCustomerId__c</fullName>
    <externalId>true</externalId>
    <label>External Customer ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>