force-app/main/default/objects/CustomerProfile__c/fields/LifetimeValue__c.field-meta.xml
<CustomField>
    <fullName>LifetimeValue__c</fullName>
    <label>Lifetime Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>