force-app/main/default/objects/CustomerProfile__c/validationRules/Churn_Risk_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Churn_Risk_Score_Range</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(ChurnRiskScore__c)), OR(ChurnRiskScore__c &lt; 0, ChurnRiskScore__c &gt; 1))</errorConditionFormula>
    <errorDisplayField>ChurnRiskScore__c</errorDisplayField>
    <errorMessage>Churn Risk Score must be between 0 and 1.</errorMessage>
</ValidationRule>