force-app/main/default/objects/CustomerProfile__c/validationRules/Lifetime_Value_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Lifetime_Value_Non_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(LifetimeValue__c)), LifetimeValue__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>LifetimeValue__c</errorDisplayField>
    <errorMessage>Lifetime Value cannot be negative.</errorMessage>
</ValidationRule>